Implement FindAll class UserControllerTest